# zero2prod

./: Cargo.toml  Dockerfile  LICENSE  spec.yaml
.sqlx/: query-9ae49e22a2b11523a86d54c6a768eb77491757e180f7b481794ae709cdbcaa5d.json
config/: base.yaml
migrations/: 20250825134747_create_subscriptions_table.sql
proptest-regressions/domain/: user_name.txt
scripts/: init.sh
src/: config.rs  main.rs  startup.rs  telemetry.rs
src/domain/: dto.rs  error.rs  mod.rs  user_email.rs  user_name.rs
src/routes/: health_check.rs  subscribe.rs
tests/: test_health_check.rs
